--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SpeechToText</string>
+    <string name="app_name">Zikar Digital Tasbeeh</string>
     <string name="tap_to_open_mic">Click to Open Mic</string>
     <string name="commands">Commands</string>
 </resources>
