--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
-    <string name="app_name">SpeechToText</string>
+    <string name="app_name">Zikar Tasbeeh</string>
     <string name="tap_to_open_mic">Click to Open Mic</string>
     <string name="commands">Commands</string>
+    <string name="add_new_ziker">Add New Ziker</string>
+    <string name="select_zikar">Select Zikar</string>
+    <string name="zikar_digital_tasbeeh">Zikar Digital Tasbeeh</string>
+    <string name="title_activity_zikar_list">ZikarListActivity</string>
 </resources>
